--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-native": "0.52.0",
     "react-native-contacts": "^2.0.0",
     "react-native-spinkit": "^1.1.1",
+    "react-native-vector-icons": "^4.5.0",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
